improve styles a little

--- a/views/base.html
+++ b/views/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Notify the Fleeple</title>
     <link rel="stylesheet" href="/style.css">
+    <meta name="viewport" content="width=device-width">
+    <meta name="mobile-web-app-capable" value="yes">
 </head>
 <body>
 
