--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 .wrapper {
-    padding: 2em;
+    padding: 5%;
 }
 
 input {
@@ -39,10 +39,18 @@ button,
     border: none;
     display: block;
     margin-bottom: 1em;
-    padding: 0.5em;
+    padding: 1em 1.5em;
     line-height: 1.1;
     background-color: green;
     color: white;
     text-decoration: none;
     font-weight: bold;
+    transition: background-color .3s;
+}
+
+button:hover,
+.button:hover,
+button:focus,
+.button:focus {
+    background-color: lime;
 }
